# sidecar-plugins

./: .gitignore  Cargo.toml  README.md  build.sh
dns/: .gitignore  Cargo.toml  README.md  build.sh
dns/src/: main.rs
hash/: Cargo.toml  README.md
hash/src/: main.rs
hasher/: Cargo.toml
hasher/src/: main.rs
qrcode/: Cargo.toml  README.md
qrcode/src/: main.rs
share/: Cargo.toml  README.md
share/src/: main.rs
system/: Cargo.toml  prepare.md
system/src/: basic_info.rs  dynamic_info.rs  main.rs  static_info.rs
