[package]
name = "dns"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
encoding_rs = "0.8.32"
regex = "1.10"
sys-locale = "0.3.2"
once_cell = "1.19"
trust-dns-resolver = "0.23"

[profile.release]
lto = true
strip = true
debug = false
panic = 'abort'
codegen-units = 1
