[package]
name = "dns"
version = "0.1.0"
edition = "2024"

[dependencies]
encoding_rs = "0.8"
regex = "1.11"
sys-locale = "0.3.2"
once_cell = "1.0"
trust-dns-resolver = "0.23"
url = "2.5"

[dependencies.clap]
version = "4.5"
features = ["derive"]

[dependencies.tokio]
version = "1.0"
features = ["full"]
