[package]
name = "share"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
mime_guess = "2.0"

[dependencies.image]
version = "0.25"
features = ["png"]

[dependencies.qrcode]
version = "0.14"
features = ["image"]

[dependencies.tokio]
version = "1.0"
features = ["full"]

[dependencies.tokio-util]
version = "0.7"
features = ["io"]

[dependencies.uuid]
version = "1.0"
features = ["v4"]